--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,14 @@
 <body>
 
 <div class='container'>
-	<%= yield %>
+		
+		<% if user_signed_in? %>
+			<%= render 'layouts/navbar' %>			
+			<%= yield %>
+		<% else %>
+			<%= yield %>
+		<% end %>
+
 </div>
 
 </body>
