--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,13 +41,15 @@ body {
 	
 	background-color: #FFF;
 	min-height: 800px;
+	padding-top: 30px;
 
 }
 
 .sidebar {
-	margin-top: 20px;
+	margin-top: 20px;	
 	padding-top: 10px;
 	padding-left: 30px;
+	padding-right: 20px;
 
 }
 
@@ -58,6 +60,14 @@ body {
 	border-left: dotted 1px;
 	min-height: 700px;
 
+}
+
+.footer {
+
+	background-color: #999;
+	margin-top: 20px;
+	padding: 20px;
+	min-height: 200px;
 }
 
 @media (min-width: 1200px) {
