--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,30 +1,8 @@
 <div class='main-content'>
 	
 	<div class='row'>
-		<div class='sidebar col-sm-3'>
-			
-			<div class='panel panel-primary'>
-				<div class='panel-heading'>
-					Friendly Links
-				</div>
-
-				<div class='panel-body'>
-					<table class='table'>
-						<tr>
-							<td>One</td>
-						</tr>
-						<tr>
-							<td>Two</td>
-						</tr>
-						<tr>
-							<td>Three</td>
-						</tr>
-					</table>
-				</div>
-
-			</div>
-
-		</div>
+		
+		<%= render 'layouts/sidebar' %>
 
 		<div class='main col-sm-9'>
 			
@@ -37,8 +15,7 @@
 			</ul>
 
 		</div>
-	</div>
-
 		
+	</div>
 
 </div>
