--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -18,19 +18,18 @@
 				<%= render 'layouts/jobposting' %>
 			</div>
 			
-			<div class='automargin'>
+			<div>
 			<%= render 'layouts/tools' %>
 			</div>
 
 		</div>
-		
+
 	</div>
-
-
 
 </div>
 
 <%= render 'layouts/footer' %>
+
 
 
 
